--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -13,6 +13,6 @@
         android:layout_gravity="center"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
-        android:background="@color/black"/>
+        android:background="#6197ae"/>
 
 </LinearLayout>
