--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -70,6 +70,7 @@
                 android:layout_marginTop="30dp"
                 android:text="Login"
                 android:textSize="18sp"
+                android:textColor="@color/white"
                 android:theme="@style/Theme.MaterialComponents"
                 android:backgroundTint="@color/aquagreen"
                 app:cornerRadius="20dp"/>
