Removed the bug which was preventing the bg of the textcolor in button to turn white in the signUp page

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -84,6 +84,7 @@
                 android:layout_marginTop="30dp"
                 android:text="SignUp"
                 android:textSize="18sp"
+                android:textColor="@color/white"
                 android:theme="@style/Theme.MaterialComponents"
                 android:backgroundTint="@color/aquagreen"
                 app:cornerRadius="20dp"/>
